test/corpus/dis_expr.txt
================================================================================
Discard Number
================================================================================

\# 1

--------------------------------------------------------------------------------

(source
  (dis_expr
    (num_lit)))

================================================================================
Discard List
================================================================================

\# (+ 1 1)

--------------------------------------------------------------------------------

(source
  (dis_expr
    (par_tup_lit
      (sym_lit)
      (num_lit)
      (num_lit))))

================================================================================
Discard Map
================================================================================

\# {:a 1
    :b 2}

--------------------------------------------------------------------------------

(source
  (dis_expr
    (struct_lit
      (kwd_lit)
      (num_lit)
      (kwd_lit)
      (num_lit))))

================================================================================
Discard Multiple
================================================================================

(let [x 1
      \# \# y 2]
  (+ x 2))

--------------------------------------------------------------------------------

(source
  (par_tup_lit
    (sym_lit)
    (sqr_tup_lit
      (sym_lit)
      (num_lit)
      (dis_expr
        (dis_expr
          (sym_lit))
        (num_lit)))
    (par_tup_lit
      (sym_lit)
      (sym_lit)
      (num_lit))))
