test/corpus/par_arr_lit.txt
========================================================================
Empty
========================================================================

@()

------------------------------------------------------------------------

(source
  (par_arr_lit))

========================================================================
Simple
========================================================================

@(:hello :there :friend)

------------------------------------------------------------------------

(source
  (par_arr_lit
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)))

========================================================================
Recursive
========================================================================

@(@(3 0 3) 8 @(3 0 3))

------------------------------------------------------------------------

(source
  (par_arr_lit
    (par_arr_lit
      (num_lit)
      (num_lit)
      (num_lit))
    (num_lit)
    (par_arr_lit
      (num_lit)
      (num_lit)
      (num_lit))))
