test/corpus/par_tup_lit.txt
========================================================================
Simple
========================================================================

(+ 1 2 3)

------------------------------------------------------------------------

(source
  (par_tup_lit
    (sym_lit)
    (num_lit)
    (num_lit)
    (num_lit)))

========================================================================
Empty
========================================================================

()

------------------------------------------------------------------------

(source
  (par_tup_lit))

========================================================================
Recurisve
========================================================================

(+ 1 2 (- 9 8))

------------------------------------------------------------------------

(source
  (par_tup_lit
    (sym_lit)
    (num_lit)
    (num_lit)
    (par_tup_lit
      (sym_lit)
      (num_lit)
      (num_lit))))
