test/corpus/qq_lit.txt
========================================================================
Paren Tuple
========================================================================

~(1 2 3)

------------------------------------------------------------------------

(source
  (qq_lit
    (par_tup_lit
      (num_lit)
      (num_lit)
      (num_lit))))

========================================================================
Simple
========================================================================

~1

------------------------------------------------------------------------

(source
  (qq_lit
    (num_lit)))
