test/corpus/quote_lit.txt
========================================================================
Tuple
========================================================================

'(:a :b :c)

------------------------------------------------------------------------

(source
  (quote_lit
    (par_tup_lit
      (kwd_lit)
      (kwd_lit)
      (kwd_lit))))

========================================================================
Simple
========================================================================

':hobbes

------------------------------------------------------------------------

(source
  (quote_lit
    (kwd_lit)))
