test/corpus/short_fn_lit.txt
========================================================================
Struct
========================================================================

|{:a 1}

------------------------------------------------------------------------

(source
  (short_fn_lit
    (struct_lit
      (kwd_lit)
      (num_lit))))

========================================================================
String
========================================================================

|"nice string"

------------------------------------------------------------------------

(source
  (short_fn_lit
    (str_lit)))

========================================================================
Call
========================================================================

|(= $ 1)

------------------------------------------------------------------------

(source
  (short_fn_lit
    (par_tup_lit
      (sym_lit)
      (sym_lit)
      (num_lit))))

========================================================================
Square Bracket Array
========================================================================

|@[8 9]

------------------------------------------------------------------------

(source
  (short_fn_lit
    (sqr_arr_lit
      (num_lit)
      (num_lit))))

========================================================================
Symbol
========================================================================

|a-sym

------------------------------------------------------------------------

(source
  (short_fn_lit
    (sym_lit)))

========================================================================
Square Bracket Tuple
========================================================================

|[1 2]

------------------------------------------------------------------------

(source
  (short_fn_lit
    (sqr_tup_lit
      (num_lit)
      (num_lit))))

========================================================================
Keyword
========================================================================

|:a-fine-keyword

------------------------------------------------------------------------

(source
  (short_fn_lit
    (kwd_lit)))

========================================================================
Number
========================================================================

|8

------------------------------------------------------------------------

(source
  (short_fn_lit
    (num_lit)))
