test/corpus/splice_lit.txt
========================================================================
In Call
========================================================================

(+ ;[1 2 3])

------------------------------------------------------------------------

(source
  (par_tup_lit
    (sym_lit)
    (splice_lit
      (sqr_tup_lit
        (num_lit)
        (num_lit)
        (num_lit)))))
