test/corpus/sqr_arr_lit.txt
========================================================================
Recursive
========================================================================

@[1 @[2 @[3 8]] @[9 0]]

------------------------------------------------------------------------

(source
  (sqr_arr_lit
    (num_lit)
    (sqr_arr_lit
      (num_lit)
      (sqr_arr_lit
        (num_lit)
        (num_lit)))
    (sqr_arr_lit
      (num_lit)
      (num_lit))))

========================================================================
Empty
========================================================================

@[]

------------------------------------------------------------------------

(source
  (sqr_arr_lit))

========================================================================
Simple
========================================================================

@[2 7 1 8 2 8]

------------------------------------------------------------------------

(source
  (sqr_arr_lit
    (num_lit)
    (num_lit)
    (num_lit)
    (num_lit)
    (num_lit)
    (num_lit)))
