test/corpus/sqr_tup_lit.txt
========================================================================
Empty
========================================================================

[]

------------------------------------------------------------------------

(source
  (sqr_tup_lit))

========================================================================
Recursive
========================================================================

[:html [:body [:p "surely you must be joking"]]]

------------------------------------------------------------------------

(source
  (sqr_tup_lit
    (kwd_lit)
    (sqr_tup_lit
      (kwd_lit)
      (sqr_tup_lit
        (kwd_lit)
        (str_lit)))))

========================================================================
Simple
========================================================================

[:alice :bob :carol]

------------------------------------------------------------------------

(source
  (sqr_tup_lit
    (kwd_lit)
    (kwd_lit)
    (kwd_lit)))
