test/corpus/struct_lit.txt
========================================================================
Recursive
========================================================================

{:alice {:likes :bob} :bob {:likes :carol} :carol {:likes :alice}}

------------------------------------------------------------------------

(source
  (struct_lit
    (kwd_lit)
    (struct_lit
      (kwd_lit)
      (kwd_lit))
    (kwd_lit)
    (struct_lit
      (kwd_lit)
      (kwd_lit))
    (kwd_lit)
    (struct_lit
      (kwd_lit)
      (kwd_lit))))

========================================================================
Empty
========================================================================

{}

------------------------------------------------------------------------

(source
  (struct_lit))

========================================================================
Simple
========================================================================

{:a 1 :b 2}

------------------------------------------------------------------------

(source
  (struct_lit
    (kwd_lit)
    (num_lit)
    (kwd_lit)
    (num_lit)))
