test/corpus/tbl_lit.txt
========================================================================
Empty
========================================================================

@{}

------------------------------------------------------------------------

(source
  (tbl_lit))

========================================================================
Recursive
========================================================================

@{:ant @{:legs 6} :bee @{:legs 6} :cheetah @{:legs 4}}

------------------------------------------------------------------------

(source
  (tbl_lit
    (kwd_lit)
    (tbl_lit
      (kwd_lit)
      (num_lit))
    (kwd_lit)
    (tbl_lit
      (kwd_lit)
      (num_lit))
    (kwd_lit)
    (tbl_lit
      (kwd_lit)
      (num_lit))))

========================================================================
Simple
========================================================================

@{:x 0 :y 100 :z -80}

------------------------------------------------------------------------

(source
  (tbl_lit
    (kwd_lit)
    (num_lit)
    (kwd_lit)
    (num_lit)
    (kwd_lit)
    (num_lit)))
