test/corpus/unquote_lit.txt
========================================================================
In Compile Call
========================================================================

((compile (let [a 1] ~(+ ,a 1))))

------------------------------------------------------------------------

(source
  (par_tup_lit
    (par_tup_lit
      (sym_lit)
      (par_tup_lit
        (sym_lit)
        (sqr_tup_lit
          (sym_lit)
          (num_lit))
        (qq_lit
          (par_tup_lit
            (sym_lit)
            (unquote_lit
              (sym_lit))
            (num_lit)))))))

========================================================================
In Quasiquote
========================================================================

~(+ ,a 1)

------------------------------------------------------------------------

(source
  (qq_lit
    (par_tup_lit
      (sym_lit)
      (unquote_lit
        (sym_lit))
      (num_lit))))

